--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -20,7 +20,7 @@
     <input type="hidden" id="Diatprefs" />
     <input type="hidden" id="mealintakeprefs" />
     <input type="hidden" id="wheyproteinprefs" />
-    <input type="hidden" id="macroprefs" />
+    <input type="text" id="macroprefs" />
     <input type="hidden" asp-for="BMI" id="bmi" />
     
     <input type="hidden" id="activelevel" />
