--- a/CeylonWellness.Web/Views/Form/Steps/_SelectWeekGoal.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectWeekGoal.cshtml
@@ -30,14 +30,9 @@
             </p>
         </div>
 
-        <div class="d-flex justify-content-center fixed-bottom mt-4 mb-4">
-            <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_ActivityLevel')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="loadNextStep('Steps/_SelectDiatpref')" class="btn btn-primary btn-lg mx-2">Continue</button>
-            </div>
-        </div>
 
-        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectMealAmount')">Continue</button> *@
+
+        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectMealAmount')">Continue</button>
     </div>
 </div>
 
