--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -1,11 +1,21 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
+
+    @* <div class="container-sm container-width">
+        <div class="d-flex flex-column align-items-center">
+            <h3>What is your Age</h3>
+            <input asp-for="Age" type="number" id="Age" class="form-control mt-4 mxwidth" required/>
+            <button class=" cl btn btn-primary mt-5" type="button" onclick="ageVerification('Steps/_SelectGender')">Continue</button>
+        </div>
+    </div> *@
+
+
 <div class="container">
     <div class="row text-center">
-        <h5 class="text-primary mb-3">WNutrition Tailored, Budget Friendly</h5>
+        <h5 class="text-primary mb-3">Nutrition Tailored, Budget Friendly</h5>
         <p class="text-muted my-3">2-MINUTE QUIZ</p>
         <h2 class="text-primary mt-3 mb-5">Select your Age</h2>
-        <div class="col-6 col-md-4">
+        <div class="col-6 col-md-3">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
                     <img src="/Assets/age-18-25-lg-2x.f6168f5c26345ae5.png" class="img-fluid" alt="Age Group 18-25">
@@ -13,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-6 col-md-3">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
                     <img src="/Assets/age-26-35-lg-2x.8d6a978e9ee0ba25.png" class="img-fluid" alt="Age Group 26-35">
@@ -21,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-6 col-md-3">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
                     <img src="/Assets/age-36-45-lg-2x.5a327ab16adf3c40.png" class="img-fluid" alt="Age Group 36-45">
@@ -29,15 +39,15 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-center">
-            <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                @* <button type="button" onclick="ageVerification('Steps/_SelectGender')" class="btn btn-primary btn-lg mx-2">Continue</button> *@
+        <div class="col-6 col-md-3">
+            <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectBarrier')">
+                <div class="age-group-card">
+                    <img src="/Assets/age-46-plus-lg-2x.33cc9cf798bc4c7f.png" class="img-fluid" alt="Age Group 46+">
+                    <div class="age-group-label">46+</div>
+                </div>
             </div>
-        </div> 
-        
+        </div>
         <p class="text-muted mt-5" style="font-weight:100; font-size:12px;">By continuing, you confirm and guarantee that you have read, understood, and agreed to our <u>Terms of Use</u> and <u>Privacy Notice</u></p>
     </div>
 </div>
-
 
