--- a/CeylonWellness.Web/Views/Form/Steps/_BMISummary.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_BMISummary.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div id="bmiBar" style="position: relative; height: 10px; width: 100%; background: linear-gradient(to right, green, yellow, red);">
                 <div id="bmiMarker" style="position: absolute; top: -10px; height: 20px; width: 20px; text-align: center;">
-                    <span style="position: absolute; bottom: 100%; white-space: nowrap;">You -<i id="BMIvalue"></i></span>
+                    <span style="position: absolute; bottom: 100%; white-space: nowrap;">You : <i id="BMIvalue"></i></span>
                     <div style="width: 20px; height: 20px; background: white; border-radius: 50%; border: 2px solid black;"></div>
                 </div>
             </div>
@@ -37,7 +37,8 @@
         <p class="notice mt-3">
             <strong>Note: </strong>Below shows your BMI according to the healthy weight range</span>
         </p>
-        <div class="row" style="min-width:500px;">
+        @* <div class="row" style="min-width:500px;"> *@
+            <div class="row">
             <div class="col-1 d-flex text-primary mb-0" style="width:100%;">
                 <p class="mb-1" style="font-weight:500;">Activity Level</p>
             </div>
@@ -52,7 +53,7 @@
             </div>
         </div>
 
-        <h3 class="text-primary">Your daily calories</h3>
+        <h3 class="text-primary mt-3">Your daily calories</h3>
         <p class="text-center text-primary mt-2">The amount of calories you must intake for you to <br />gain weight based on your activity level and BMR</p>
 
         <span id="dailycalorie" class="daily-calorie text-primary"></span>
