--- a/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
@@ -3,8 +3,8 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3">Do you have any barriers to follow a diet plan?</h2>
-        <p class="text-primary mb-5">Select which apply</p>
+        <h2 class="text-primary mt-3">Any difficulties following a diet?</h2>
+        <p class="text-primary mb-3">Select which apply</p>
 
         <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Lack of motivation</a>
         <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Lack of Time due to busy schedule</a>
@@ -13,6 +13,12 @@
         <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Nutritional Knowledge Gap</a>
         <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Sleeping Problems</a>
 
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectDiatpref')">Continue</button>
+        <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_DairyProductsEggs')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="loadNextStep('Steps/_BMISummary')" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div>
+        @* <button class="cl btn btn-primary mt-5 mb-1 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectDiatpref')">Continue</button> *@
     </div>
 </div>
