--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -17,18 +17,24 @@
     <input type="hidden" asp-for="ActivityLevel" name="ActivityLevel" id="ActivityLevel" /> *@
     <input type="hidden" name="goal" id="goals" />
     <input type="hidden" id="weightss" />
+    <input type="hidden" id="Diatprefs" />
+    <input type="hidden" id="mealintakeprefs" />
+    <input type="hidden" id="wheyproteinprefs" />
+    <input type="hidden" id="macroprefs" />
     <input type="hidden" asp-for="BMI" id="bmi" />
 
-    @* For TDEE and BMR *@
-    <input type="hidden" id="WeightBMR" />
-    <input type="hidden" id="HeightBMR" />
-    <input type="hidden" id="AgeBMR" />
-    <input type="hidden" id="ActlevelBMR" />
-    <input type="hidden" id="GenderBMR" />
-    <input type="hidden" id="TWeightBMR" />
-    <input type="hidden" id="WeekgoalBMR" />
 
-    <input type="hidden" id="activelevel" />
+    @* For TDEE and BMR *@
+    <input type="text" id="WeightBMR" />
+    <input type="text" id="HeightBMR" />
+    <input type="text" id="AgeBMR" />
+    <input type="text" id="ActlevelBMR" />
+    <input type="text" id="GenderBMR" />
+    <input type="text" id="TWeightBMR" />
+    <input type="text" id="WeekgoalBMR" />
+
+
+    <input type="text" id="activelevel" />
 
 </form>
 
