--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
@@ -3,13 +3,20 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3">What is your dietary preference?</h2>
-        <input type="hidden" asp-for="MealPreference" id="Diatpref" />
+        <h2 class="text-primary mt-3">Are you vegetarian or non-vegetarian?</h2>
+        <input type="hidden" asp-for="Diatpref" id="Diatpref" />
         <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Non Vegetarian" onclick="selectDiatpref(this)">Non Vegetarian</a>
-        <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegan" onclick="selectDiatpref(this)">Vegan</a>
+        @* <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegan" onclick="selectDiatpref(this)">Vegan</a> *@
         <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegetarian" onclick="selectDiatpref(this)">Vegetarian</a>
-        <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="None" onclick="selectDiatpref(this)">None</a>
-
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_MeatPref')">Continue</button>
+        @* <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="None" onclick="selectDiatpref(this)">None</a> *@
+        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="handleNextStep()">Continue</button> *@
+        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_MeatPref')">Continue</button> *@
+        <div class="d-flex justify-content-center fixed-bottom mt-5 mb-5">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_SelectWeekGoal')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="handleNextStep()" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div>
     </div>
 </div>
+
