--- a/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
@@ -3,16 +3,26 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3 mb-5">What is your weight and weight</h2>
+        <h2 class="text-primary mt-3 mb-5">What is your height and weight?</h2>
 
         <label for="height" class="form-label text-primary">Height (Cm)</label>
-        <input asp-for="Height" type="number" id="height" class="form-control big-input mb-4" required />
+        <input asp-for="Height" type="text" id="height" class="form-control big-input mb-4" required />
 
         <label for="weight" class="form-label text-primary">Weight (Kg)</label>
-        <input asp-for="Weight" type="number" id="weight" class="form-control big-input" required />
+        <input asp-for="Weight" type="text" id="weight" class="form-control big-input" required />
+        @* <div id="weight-group" style="display: none;">
+            <label for="weight" class="form-label text-primary">Weight (Kg)</label>
+            <input asp-for="Weight" type="number" id="weight" class="form-control big-input" required />
+        </div> *@
 
         <p class="notice mt-5"><strong>Note: </strong>Capturing your weight and height allows us to calculate your Body Mass Index (BMI). BMI is an important indicator used to assess whether you are underweight, normal weight, overweight, or obese, which helps in understanding your overall health status.</p>
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SelectGoal')">Continue</button>
-
+        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')">Continue</button> *@
+        <div class="d-flex justify-content-center fixed-bottom mt-3 mb-5">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_SetAge')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div>
     </div>
 </div>
+@* <script src="~/js/genderSelection.js"></script> *@
