remove 0 from float value inputs

--- a/CeylonWellness.Web/Views/Form/Steps/_SetBodyMeasurements.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SetBodyMeasurements.cshtml
@@ -5,13 +5,13 @@
         <h2 class="text-primary mt-3 mb-4">Enter Body Fat Measurements</h2>
         <div id="measurements">
             <label for="neck" class="form-label text-primary">Neck (Cm)</label>
-            <input asp-for="Neck" type="text" id="neck" class="form-control big-input mb-4" required />
+            <input asp-for="Neck" value=""  type="text" id="neck" class="form-control big-input mb-4" required />
 
             <label for="waist" class="form-label text-primary">Waist (Cm)</label>
-            <input asp-for="Waist" type="text" id="waist" class="form-control big-input mb-4" required />
+            <input asp-for="Waist" value="" type="text" id="waist" class="form-control big-input mb-4" required />
 
             <label for="hip" class="form-label text-primary" id="hip-label" style="display:none;">Hip (Cm)</label>
-            <input asp-for="Hip" type="text" id="hip" class="form-control big-input mb-4" style="display:none;" required />
+            <input asp-for="Hip" value=""  type="text" id="hip" class="form-control big-input mb-4" style="display:none;" required />
 
         </div>
         
