--- a/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
@@ -6,10 +6,10 @@
         <h2 class="text-primary mt-3 mb-5">What is your height and weight?</h2>
 
         <label for="height" class="form-label text-primary">Height (Cm)</label>
-        <input asp-for="Height" type="text" id="height" class="form-control big-input mb-4" required />
+        <input asp-for="Height" value="" type="text" id="height" class="form-control big-input mb-4" required />
 
         <label for="weight" class="form-label text-primary">Weight (Kg)</label>
-        <input asp-for="Weight" type="text" id="weight" class="form-control big-input" required />
+        <input asp-for="Weight" value="" type="text" id="weight" class="form-control big-input" required />
         @* <div id="weight-group" style="display: none;">
             <label for="weight" class="form-label text-primary">Weight (Kg)</label>
             <input asp-for="Weight" type="number" id="weight" class="form-control big-input" required />
