order of fields

--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -25,16 +25,16 @@
 
 
     @* For TDEE and BMR *@
-    <input type="text" id="WeightBMR" />
-    <input type="text" id="HeightBMR" />
-    <input type="text" id="AgeBMR" />
-    <input type="text" id="ActlevelBMR" />
-    <input type="text" id="GenderBMR" />
-    <input type="text" id="TWeightBMR" />
-    <input type="text" id="WeekgoalBMR" />
+    <input type="hidden" id="WeightBMR" />
+    <input type="hidden" id="HeightBMR" />
+    <input type="hidden" id="AgeBMR" />
+    <input type="hidden" id="ActlevelBMR" />
+    <input type="hidden" id="GenderBMR" />
+    <input type="hidden" id="TWeightBMR" />
+    <input type="hidden" id="WeekgoalBMR" />
 
 
-    <input type="text" id="activelevel" />
+    <input type="hidden" id="activelevel" />
 
 </form>
 
