Sanity document retrival and Stylings

--- a/CeylonWellness.Web/Views/Articles/Details.cshtml
+++ b/CeylonWellness.Web/Views/Articles/Details.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Article Details";
 }
+<link rel="stylesheet" href="/css/Article.css" />
 
-<h2>Article Details</h2>
 
 <div class="article-content">
     @Html.Raw(Model)
