--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -8,7 +8,7 @@
         <div class="col-6 col-md-4">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
-                    <img src="/Assets/age-18-25-lg-2x.f6168f5c26345ae5.png" class="img-fluid" alt="Age Group 18-25">
+                    <img src="/Assets/AI_generated/18_age_group.jpg" class="img-fluid" alt="Age Group 18-25">
                     <div class="age-group-label">18 - 25</div>
                 </div>
             </div>
@@ -16,7 +16,7 @@
         <div class="col-6 col-md-4">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
-                    <img src="/Assets/age-26-35-lg-2x.8d6a978e9ee0ba25.png" class="img-fluid" alt="Age Group 26-35">
+                    <img src="/Assets/AI_generated/26_age_group.jpg" class="img-fluid" alt="Age Group 26-35">
                     <div class="age-group-label">26 - 35</div>
                 </div>
             </div>
@@ -24,14 +24,14 @@
         <div class="col-6 col-md-4">
             <div class="age-group-card-container" onclick="loadNextStep('Steps/_SelectGender')">
                 <div class="age-group-card">
-                    <img src="/Assets/age-36-45-lg-2x.5a327ab16adf3c40.png" class="img-fluid" alt="Age Group 36-45">
+                    <img src="/Assets/AI_generated/45_age_group.jpg" class="img-fluid" alt="Age Group 36-45">
                     <div class="age-group-label">36 - 45</div>
                 </div>
             </div>
         </div>
         <div class="d-flex justify-content-center">
             <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                @* <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button> *@
                 @* <button type="button" onclick="ageVerification('Steps/_SelectGender')" class="btn btn-primary btn-lg mx-2">Continue</button> *@
             </div>
         </div> 
