Notes to new pages

--- a/CeylonWellness.Web/Views/Form/Steps/_SelectWheyProtien.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectWheyProtien.cshtml
@@ -7,7 +7,10 @@
         <a class="btn btn-outline-primary gender-btn txt wheyproteinpref" data-pref="noscoop" onclick="selectWheyproteinpref(this)">No, I don’t take</a>
         <a class="btn btn-outline-primary gender-btn txt wheyproteinpref" data-pref="onescoop" onclick="selectWheyproteinpref(this)">Yes, I take 1 Scoop</a>
         <a class="btn btn-outline-primary gender-btn txt wheyproteinpref" data-pref="twoscoop" onclick="selectWheyproteinpref(this)">Yes, I take 2 Scoop</a>
-        <div class="d-flex justify-content-center fixed-bottom mt-5 mb-5">
+        <p class="notice mt-2">
+            <strong>Note: </strong>Including whey protein in your diet can help you meet your daily protein needs, especially if you have higher protein requirements for muscle building or recovery. However, it's important to use it according to your dietary goals and needs.
+        </p>
+        <div class="d-flex justify-content-center fixed-bottom mt-6 mb-2">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SelectMealIntake')" class="btn btn-secondary btn-lg mx-2">Previous</button>
                 <button type="button" onclick="loadNextStep('Steps/_SelectBarrier')" class="btn btn-primary btn-lg mx-2">Continue</button>
