--- a/CeylonWellness.Web/Views/Form/Steps/_SelectMacroType.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectMacroType.cshtml
@@ -3,7 +3,7 @@
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
         <input type="hidden" asp-for="macropref" id="macropref" />
-        <h2 class="text-primary mt-3 mb-4">What is your macro type?</h2>
+        <h2 class="text-primary mt-3 mb-2">What is your macro type?</h2>
         <div id="macroOptions" class="d-flex flex-column align-items-center mt-4">
             <button type="button" class="btn btn-outline-primary gender-btn txt macropref budgetPlan" data-pref="budgetPlan" onclick="selectMacroinpref(this)">Value Protein Plan (Budget plan)</button>
             <button type="button" class="btn btn-outline-primary gender-btn txt macropref lowCarb" data-pref="lowCarb" onclick="selectMacroinpref(this)">Low Carb(Keto)</button>
@@ -12,12 +12,15 @@
         </div>
 
         <p class="notice mt-2">
-            <strong>Note: </strong>To accurately calculate body fat percentage, these measurements can help ensure precision and provide the most accurate results.
+            <strong>Note: </strong>Low Carb: For those looking to reduce carbohydrate intake.
+            High Protein: Ideal for individuals focused on muscle building and maintenance.
+            Balanced: A well-rounded diet with a balanced intake of carbohydrates, proteins, and fats.
+            Value Protein Plan (Low Budget): High protein meals that are budget-friendly, perfect for those looking to optimize protein intake without breaking the bank.
         </p>
 
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_heightWeight')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="loadNextStep('Steps/_DairyProductsEggs')" class="btn btn-secondary btn-lg mx-2">Previous</button>
                 <button type="button" onclick="loadNextStep('Steps/_SelectMealIntake')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
