--- a/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
@@ -12,7 +12,9 @@
             <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealthreesnack" data-pref="highProtein" onclick="selectMealinpref(this)">3 Main Meals with 3 snacks</button>
 
         </div>
-
+        <p class="notice mt-2">
+            <strong>Note: </strong> Choose the number of meals that best fits your schedule. A higher number of meals can be beneficial for achieving various weight goals, as it helps manage hunger and maintain energy levels throughout the day.
+        </p>
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SelectMacroType')" class="btn btn-secondary btn-lg mx-2">Previous</button>
