--- a/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_DairyProductsEggs')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="loadNextStep('Steps/_BMISummary')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                <button type="button" onclick="loadNextStep('Steps/_MealDistribution')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
         @* <button class="cl btn btn-primary mt-5 mb-1 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectDiatpref')">Continue</button> *@
