--- a/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
@@ -31,6 +31,9 @@
             </button>
         </div>
     </div>
+    <div id="imageContainer" class="position-fixed end-0 top-50 translate-middle-y d-none">
+        <img src="/Assets/AI_generated/45_age_group.jpg" alt="Image" class="img-fluid">
+    </div>
 </div>
 <div class="d-flex justify-content-center fixed-bottom mt-4 mb-4">
     <div class="d-flex">
