--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -21,7 +21,7 @@
     <input type="hidden" id="mealintakeprefs" />
     <input type="hidden" id="wheyproteinprefs" />
     <input type="hidden" id="macroprefs" />
-    <input type="hidden" id="mealdistributionprefs" />
+    <input type="hidden" asp-for="mealdistributionpref" id="mealdistributionprefs" />
     <input type="hidden" asp-for="BMI" id="bmi" />
 
 
