--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -37,7 +37,7 @@
 
     <input asp-for="TargetWeight" type="hidden" id="TWeightBMR" />
     <input type="hidden" id="WeekgoalBMR" />
-    <input type="text" asp-for="MaintaincalAmount" id="maintcalamount" />
+    <input type="hidden" asp-for="MaintaincalAmount" id="maintcalamount" />
 
 
 
