--- a/CeylonWellness.Web/Views/Home/Index.cshtml
+++ b/CeylonWellness.Web/Views/Home/Index.cshtml
@@ -68,6 +68,12 @@
         </div>
         
     </div>
+
+    <div class="row mt-4">
+        <div class="col-12 d-flex justify-content-center">
+            <a asp-action="Details" asp-controller="Home" class="btn btn-primary btn-lg mt-4">See todays recomended Meals</a>
+        </div>
+    </div>
 </div>
 
 
